--- a/index.html
+++ b/index.html
@@ -53,20 +53,19 @@
         <h1>work</h1>
         <div id="photos">
               <h2 class="titlework"></h2>
-            <a href="https://todolistnodewmongoose.herokuapp.com/"><img onclick="magnify($(this).attr('s"  src="https://previews.dropbox.com/p/thumb/AAunbKX7OLevYquUFaC_DJ8bNx15UnIvuLRxiz0SKIusl4bgEwkzPFJnaEDRN4A8CVVBctgFO1n1N4xPLTszipYTJJEdHQXUr3YInbigYXuyAzONdRz8zsAAokVZ7myMYjTkRwLM85njNLj-mA6qIq5HCZfJBK0028emHL_c08VfHouEUM9q8-GBr4UzMc1G0s-4dARYi9-ZG8mgLn_v8ocdYDI2Bfe3KL8-49K2yfcjsF2CKaELkBnRuS5KjsrdUB7QEGuIcRW1ywVz0e04rzXwfYNCNEZHCDec_iwDW8XLGLNLVVloYfbR5NWzcXykjiPWBIb_iwIukuvtGwvMemFk/p.png?fv_content=true&size_mode=5">
-          </a>
+            <a href="https://todolistnodewmongoose.herokuapp.com/"><img onclick="magnify($(this).attr('src'))"  src="image/todolist.png"></a>
               <h2 class="titlework"></h2>
-            <a href="https://snakesoap.github.io/Tindog-Bootstrap/"><img onclick="magnify($(this).attr('src'))" src="https://previews.dropbox.com/p/thumb/AAvWdQs9ccV2jyLqduUdZTuyn8S-kMhV8IaI5-zeOBTtVlEqGxz1ZJVGb-ukWT9uCRVvaOR9_RNB7grzuykgB5SYELuVmlWfwRDN3BCJoCqxZTwaNUY-XZI97z-7ZRQVjYdEamB3rpm-n0wm9frWOt4bN-t6KJE87C0XdW9EQV4EPxK_A_NclLqGijb5jqqP0fZxwfZoKmJ-V5GGG95vXiM_gSXJWHVYNVaLY3eLBDBoxQcr9H6_6ccQwEYuB0x3SAEk8DCgGXidYM1ppembhbrpKC-TqM4lPlndB8WONRPhpR6t3Q2tICEqR9_IEE2cZZ_grKu1eL26qXcE8in9BIF4MngR5-BTnKFcPxlOznhGcg/p.png?fv_content=true&size_mode=5"></a>
+            <a href="https://snakesoap.github.io/Tindog-Bootstrap/"><img onclick="magnify($(this).attr('src'))" src="image/tindog.png"></a>
               <h2 class="titlework"></h2>
-            <a href="https://github.com/Snakesoap/Type-ahead-js"><img onclick="magnify($(this).attr('src'))" src="https://previews.dropbox.com/p/thumb/AAt00Hvo6ewcAygVMMDKzkxAabUafZNz2ydaQl7NNAYOtDB_mIySIaLwt2Gl1r51rspZ-cmYgL3m4MndgYfKGpKdrFzlh9YUMQ4XOTCM9f3RFLwJV8Wr4xmqbKeqvxaTw805IHCdt5iqxDZLYzuBh69GvODQBQkoTS0fVfyaQYZbZCyeJ_5HcqWc1J_K8O-yM0_2QFe_oqY_BpeUcjbO41QqK-Al4QSFuf_ARb7iuXJrTMdJxotQUBPQyfLruIsBVVgNfxW_SL4Zjy2EaDt9B9A0UIBwzWuUppJolvCjiha5X8Bg1vnNeWZ4yyma5-fXazicR4w2jfhEmZcAsTkfCTk9/p.png?fv_content=true&size_mode=5"></a>
+            <a href="https://github.com/Snakesoap/Type-ahead-js"><img onclick="magnify($(this).attr('src'))" src="image/type.png"></a>
               <h2 class="titlework"></h2>
-            <a href="https://github.com/Snakesoap/Js-scroll-in/tree/master"><img onclick="magnify($(this).attr('src'))" src="https://previews.dropbox.com/p/thumb/AAtK_zKmHiRvWq1Hpn81HSz6bk7d-RJ1CHxdeGOgbKq6hzMXJYLn5g2MQBsQkm3N0aBim6w2EwqEkGHVXgBxQXsrzb7KOsm42sh2QZKKmFE4eB_by9RwLKtGz-GesXz9DDs7wF8k-XukR-sWtC7HCb70xu2-isrStA2QarrMWIw-zDuAkDUinxnm7FaOSQcLWYqeztP7X3aEqB1ESEeP0boR1TfZKHf7PIjfNCQp6ZVSEV_27JNop2LE0mQTctVkHNwQm8PxcOfEb6Y3g9gLOMsCsmKOEKGv-ODqts7h4rYZ6AWBS40ZgqfkPs-vdIWSXpRetihFdEdDYrWgd-CJOaKo/p.png?size=1280x960&size_mode=3"></a>
+            <a href="https://github.com/Snakesoap/Js-scroll-in/tree/master"><img onclick="magnify($(this).attr('src'))" src="image/scroll.png"></a>
               <h2 class="titlework"></h2>
-            <a href="https://ancient-basin-56733.herokuapp.com/"><img onclick="magnify($(this).attr('src'))" src="https://previews.dropbox.com/p/thumb/AAstSNMncZqkzCF9S-A-DLVv2dDpcQJmxaKhLoyHl9CPdwLeGMCxOTIjPtPlCT4ycGzoXqipOJH4iZvwO7qndljC1SnR1z4dll87RzKVV-wJdBGYzngOT0jYeGS8Umm8LhJnXPzLoRWBRXl2jJ1HVVxmCZeYB0n0ud--sd-SMcRMJcXQnYdYJCdJsnahEvdMT9vY6W1FrB40HvsDN-4033m-gV8PQ7W48esA8aHcZ_pWo-rF3C-OGvCd_Mxl3xIYYhpUNMCU3ZWJdiJ4RMMo02-Ee9FGhSlqOB12Lw-4s1V4_RjwQkDEN3-XiwuPhB2MLmYocMo0-KuRJSqP8XhuI5NcC6_HRE9FaMjczTbbskKk8w/p.png?fv_content=true&size_mode=5"></a>
+            <a href="https://ancient-basin-56733.herokuapp.com/"><img onclick="magnify($(this).attr('src'))" src="image/blog.png"></a>
               <h2 class="titlework"></h2>
-            <a href="https://apinewsletter.herokuapp.com/"><img onclick="magnify($(this).attr('src'))" src="https://previews.dropbox.com/p/thumb/AAvvCSHZk4fNc1BQ4_SiSbhwb18Aw9BLrdeS-K4HbKNm2sXVMxjB3Qq7ggq9CJo61HLLqnu1WZQz_JXvDb3T7iKBtXJlrsq-lCE6l_NKcHjykDepVCd1dwTV_fVoHL15XUnmMab3j5Vu8CrJh9MdjGHXwTWN7v8cKf61SxTqXQCL9cTXQkVQF9jyLguQcoKyPYnis-aA0Rlcxe_yI1UDaK0vgOGkbU2SqpMBQqpljLFfbYgIr7phM58zuJXp5zsodocp3GeyvmgKBCruZ1n1UK3tlxmVUNR5ucvemSRtlb_XnFf9l9-7Btce8UVX07TwejOtbSk47YloN8zoihfY2YNAq2oFF5FGj5BQl2Hb54AgEQ/p.png?fv_content=true&size_mode=5"></a>
+            <a href="https://apinewsletter.herokuapp.com/"><img onclick="magnify($(this).attr('src'))" src="image/api.png"></a>
               <h2 class="titlework"></h2>
-            <a href="https://codesandbox.io/s/blissful-stonebraker-hlcve"><img onclick="magnify($(this).attr('src'))" src="https://previews.dropbox.com/p/thumb/AAvA56mcGWmah3AWbkOa7DD8zp0LNZqTx8QB1cOI33McfkNxPEpBV4OwciZjE3ZSHRV6FXAv8Th86vkx0L3uUQUskovCVcqseFjy8d_r1HXib0JjjIyHbUADz6r8QTGQobtYscPEvYXSrISTTjYndLpfSy20e8buPnO56PXFIfjLYt1U99VBfoOxYJ3YScb-QcSNL6GVAXZl8sdERe8YNqv_b_0eldCiNM9T2_eGKCDtu1rQPWgtqKTm6a1IvA5fRmMP0JiM74zAdf6l5RftayQQmwUL4cAM6sS-s1505yzkVj2E9-D2j-KLItEfu5DdMP1Oeob1h0tUsxLULgUEAtl-Grj0w9fvmhZZR55_tJVwNg/p.png?fv_content=true&size_mode=5"></a>
+            <a href="https://codesandbox.io/s/blissful-stonebraker-hlcve"><img onclick="magnify($(this).attr('src'))" src="image/react.png"></a>
 
         </div>
     </div>
