--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <h2 class="titlework"></h2>
             <a href="https://snakesoap.github.io/Tindog-Bootstrap/"><img onclick="magnify($(this).attr('src'))" src="image/tindog.png"></a>
               <h2 class="titlework"></h2>
-            <a href="https://github.com/Snakesoap/Type-ahead-js"><img onclick="magnify($(this).attr('src'))" src="image/type.png"></a>
+            <a href="https://snakesoap.github.io/Type-ahead-js/"><img onclick="magnify($(this).attr('src'))" src="image/type.png"></a>
               <h2 class="titlework"></h2>
             <a href="https://github.com/Snakesoap/Js-scroll-in/tree/master"><img onclick="magnify($(this).attr('src'))" src="image/scroll.png"></a>
               <h2 class="titlework"></h2>
