--- a/index.html
+++ b/index.html
@@ -73,8 +73,10 @@
         <h1>about</h1>
         <p>
             Hello. Thanks for stopping by. My name is Princeton Hardy. Graduated from UTD class of 2017 with a bachlors degree.
-            I'm a musican that plays guitar and also drums.
-            The biggest thing I like about music is that there is always something new to learn and apply and with that opens new doors for creativity.
+            I'm a musician that plays guitar, drums and am passionate about technology. 
+            
+            The biggest thing I like about music is that there is always something new to learn and apply and with that opens new doors for creativity. The same can be said about tech, from building
+            computers, learning about new hardward and software.
             It humbles me and teaches me that I dont know everything and there's always more to learn no matter the years of experience.
             There is so much to learn in this world and learning the interesting things makes life fun and enjoyable.
 
