--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <table id="top_part">
         <tr>
             <td id="about" class="animated slideInLeft" style="animation-delay:2s;">
-                <h1>Life is all about learning.</h1>
+                <h1>Life is all about continuous learning.</h1>
                 <a href="mailto:princetonhardy@gmail.com?subject=Interview&cc="><button class="btn_one">Hire Me</button></a><br>
                 <table>
                     <tr>
