--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <tr>
                         <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://www.facebook.com/princeton.hardy"><i class="fab fa-facebook"></i></a></td>
                         <td class="animated zoomIn" style="animation-delay:2.4s;"><a class="social" href="https://github.com/Snakesoap"><i class="fab fa-github"></i></a></td>
-                        <td class="animated zoomIn" style="animation-delay:2.6s;"><a class="social" href="https://www.instagram.com/pillowmonsta/"><i class="fab fa-instagram"></i></a></td>
+                        <td class="animated zoomIn" style="animation-delay:2.6s;"><a class="social" href="https://www.instagram.com"><i class="fab fa-instagram"></i></a></td>
                         <td class="animated zoomIn" style="animation-delay:2.8s;"><a class="social"></a></td>
                         <td class="animated zoomIn" style="animation-delay:3.0s;"><a class="social"></a></td>
                     </tr>
@@ -72,13 +72,8 @@
     <div id="bio">
         <h1>about</h1>
         <p>
-            Hello. Thanks for stopping by. My name is Princeton Hardy. Graduated from UTD class of 2017 with a bachlors degree.
-            I'm a musician that plays guitar, drums and am passionate about technology. 
-            
-            The biggest thing I like about music is that there is always something new to learn and apply and with that opens new doors for creativity. The same can be said about tech, from building
-            computers, learning about new hardward and software.
-            It humbles me and teaches me that I dont know everything and there's always more to learn no matter the years of experience.
-            There is so much to learn in this world and learning the interesting things makes life fun and enjoyable.
+            Full-stack developer with practical experience in Web Devlopment and Javascript from an object oriented background.
+            Fully devoted to the craft of code.
 
         </p>
         <p>
@@ -112,7 +107,7 @@
                                     <td>
                                         <a class="social" href="https://www.facebook.com/princeton.hardy"><i class="fab fa-facebook"></i></a>
                                         <a class="social" href="https://github.com/Snakesoap"><i class="fab fa-github"></i></a>
-                                        <a class="social" href="https://www.instagram.com/pillowmonsta/"><i class="fab fa-instagram"></i></a>
+                                        <a class="social" href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
                                         <a class="social"></a>
                                         <a class="social"></a>
                                     </td>
